# mplay

./: Cargo.toml  licence  readme.md
.cargo/: config.toml
src/: artist.rs  library.rs  main.rs  media.rs  metadata.rs  output.rs  player.rs  state.rs  ui.rs
src/loader/: mod.rs
src/playback/: mod.rs
src/sink/: linux.rs  mod.rs
src/term/: mod.rs  state.rs
src/ui/: mod.rs  state.rs
