[package]
name = "fy"
version = "0.2.0"
description = "Music player"
publish = false
edition = "2021"

[dependencies.rodio]
version = "0.19.0"
default-features = false
features = ["symphonia-all"]

[dependencies.symphonia]
version = "0.5.4"

# my dependencies
# cri
[dependencies.ratatui]
version = "0.28.1"
