[package]
name = "shun" # think of something more apt
version = "0.5.0"
description = "Linux native, terminal-based music player"
publish = false
edition = "2024"

[dependencies]
ratatui = "0.29.0"
symphonia = "0.5.4"

[target.'cfg(all(target_os="linux"))'.dependencies]
# TODO: pipewire
pulse = { package = "libpulse-binding", version = "2.30.1" }
pulse_simple = { package = "libpulse-simple-binding", version = "2.29.0" }
